# mtg_rarity_classifier

./: pyproject.toml
dataset/: fetch_cards.py  parse_cards.py
