[project]
name = "mtg-rarity-classifier"
version = "0.1.0"
description = "Classifier which suggests a rarity for a supplied MTG card."
authors = [
    {name = "Golos1",email = "68024905+Golos1@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch (>=2.7.1,<3.0.0)",
    "torchtext (>=0.18.0,<0.19.0)",
    "tenacity (>=9.1.2,<10.0.0)",
    "ratelimit (>=2.2.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
